# star-wars-api-wrapper

./: README.md  data.json  star-wars.cabal
app/: Main.hs
src/: Lib.hs  Person.hs
