name:                star-wars
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/janaipakos/star-wars-api-wrapper
license:             BSD3
license-file:        LICENSE
author:              James Anaipakos
maintainer:          janaipakos@gmail.com
copyright:           2017 James Anaipakos
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       , Person
  build-depends:       base >= 4.7 && < 5
                       , bytestring
                       , http-conduit
                       , aeson
                       , text
  default-language:    Haskell2010
  extensions:          OverloadedStrings
                     , DeriveGeneric

executable star-wars-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , star-wars
                     , bytestring
                     , http-conduit
                     , aeson
                     , text
  default-language:    Haskell2010
  extensions:          OverloadedStrings
                     , DeriveGeneric

test-suite star-wars-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , star-wars
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/janaipakos/star-wars-api-wrapper
